Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-470

Fix BooleanRleDecoderImpl::skip() read over end of stream

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • None
    • C++
    • None

    Description

      When Boolean RLE stream has trailing null values, seek & skip may lead to read over the end of stream and "bad read in nextBuffer" exception will be thrown.

      Attachments

        Issue Links

          Activity

            People

              wgtmac Gang Wu
              wgtmac Gang Wu
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m