ORC-470: [C++] Fix BooleanRleDecoderImpl::skip() read over end of stream